# pieltk

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements_dev.txt  tox.ini
.github/workflows/: pylint.yml  tests.yml
converters/: armenian.py  avestan.py  carian.py  glagolitic.py  hittite.py  linearb.py  luwian.py  lydian.py  oscan.py  pie.py
converters/xcr/: ascii_to_unicode.py
phonology/xcl/: syllabfier.py
src/pieltk/alphabet/: osc.py  xcl.py  xcr.py  xlc.py  xld.py
src/pieltk/alphabet/grc/: cypriot.py
src/pieltk/converters/: cypriot.py  general.py  glagolitic.py  gothic.py  hittite.py  linearb.py  luwian.py  lycian.py  lydian.py  ogham.py  oldpersian.py  oscan.py  pie.py  polytonicgreek.py  vedic.py
src/pieltk/converters/ave/: ascii_to_unicode.py
src/pieltk/converters/xcl/: ascii_to_unicode.py  proiel.py
src/pieltk/converters/xcr/: ascii_to_unicode.py
src/pieltk/phonology/xcl/: syllabify.py  xcl.py
tests/: test_alphabets.py  test_armenian_converters.py  test_vedic_converters.py
