[tool.poetry]
name = "pieltk"
version = "0.1.0"
description = ""
authors = ["Caio Geraldes <caioaguida@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pylint = "^2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
