[tool.poetry]
name = "pieltk"
version = "0.1.0"
description = ""
authors = ["Caio Geraldes <caio.geraldes@usp.br"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
cltk = "^1.0.19"

[tool.poetry.dev-dependencies]
pylint = "^2.10.2"
jupyter = "^1.0.0"
notebook = "^6.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
